Add year filter dropdown with multi-filter support

--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
                 <!-- Sidebar -->
                 <aside class="sidebar">
                     <div class="sidebar-section">
-                        <h3 class="sidebar-title">Months</h3>
-                        <div id="monthFilters" class="month-filters">
-                            <!-- Month checkboxes will be dynamically inserted -->
-                        </div>
+                        <h3 class="sidebar-title">Year</h3>
+                        <select id="yearFilter" class="select-input">
+                            <option value="">All Years</option>
+                        </select>
+                    </div>
+
+                    <div class="sidebar-section">
+                        <h3 class="sidebar-title">Month</h3>
+                        <select id="monthFilter" class="select-input">
+                            <option value="">All Months</option>
+                        </select>
                     </div>
 
                     <div class="sidebar-section">
