Move search to top, use white background, sharper corners (4px), title color change on hover

--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
     <!-- Main Content -->
     <main class="main-content">
         <div class="container">
+            <!-- Search Bar (Full Width) -->
+            <div class="search-section-full">
+                <div class="search-container-full">
+                    <input type="text" id="searchInput" class="search-input-full" placeholder="Search papers by title, author, or abstract...">
+                    <svg class="search-icon" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                        <path d="M9 17A8 8 0 1 0 9 1a8 8 0 0 0 0 16zM19 19l-4.35-4.35" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+            </div>
+
             <!-- Main Layout with Sidebar -->
             <div class="main-layout">
                 <!-- Left Sidebar - Filters -->
                 <aside class="sidebar">
                     <h2 class="sidebar-main-title">Refine Results</h2>
-
-                    <!-- Search Within Results -->
-                    <div class="sidebar-section">
-                        <h3 class="sidebar-title">Search Within Results</h3>
-                        <div class="search-container">
-                            <input type="text" id="searchInput" class="search-input" placeholder="Search...">
-                            <svg class="search-icon" width="18" height="18" viewBox="0 0 20 20" fill="none">
-                                <path d="M9 17A8 8 0 1 0 9 1a8 8 0 0 0 0 16zM19 19l-4.35-4.35" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </div>
-                    </div>
 
                     <!-- Filters -->
                     <div class="sidebar-section">
